--- a/config/somz.yml
+++ b/config/somz.yml
@@ -1,6 +1,13 @@
 summarizer:
     class: SomSummarizer
 
+somz:
+    n_r: 1
+    n_m: 1
+    randomize_selection: true
+    randomize_noise: false
+
+
 norm:
     # These estimates of the 10-sigma depths are used to
     # compute the "Luptitudes" from the magnitudes
@@ -18,14 +25,14 @@ norm:
     mag_max: 28
 
 
-deep:
+redshift:
     input:
         format: hdf5
-        file: ./deep_photometry_catalog.hdf5
+        file: ./spectroscopic_data.hdf5
         # This refers to an HDF5 group. For the root of the file,
         # use "/"
-        group: photometry
-        bands: ugrizy
+        group: /
+        bands: riz
         # The format of the column names
         band_name: mag_{}
 
@@ -38,41 +45,41 @@ deep:
 
         # A luptitude (if any) to include in the SOM
         # Omit or set to null for none
-        use_band: null
+        use_band: i
 
         # Whether to load all the data at once (stream=false) or in chunks (stream=true)
+        stream: false
+        extra:
+            redshift: redshift
+    som:
+        dim: 32
+        epochs: 100
+        rate: 0.5
+        sigma: 1.0
+        use_errors: false
+
+    dz: 0.02
+    zmax: 3.0
+
+wide:
+    input:
+        format: hdf5
+        file: ./wide_catalog.hdf5
+        group: shear
+        bands: riz
+        band_name: mcal_mag_{}
+        use_band: i
+        load_errors: false
+        # nmax: 1000000
         stream: true
-        # The maximum size of a chunk.
-        max_chunk_size: 50000
-        # Randomize the order of loaded chunks. Within each chunk the order
-        # stays the same
+        max_chunk_size: 200000
         random_chunk_order: true
-        # The RNG seed for the ordering
-        order_seed: 678910
+        order_seed: 23456
     som:
         dim: 32
         epochs: 10
         rate: 0.5
         sigma: 1.0
-        use_errors: false
-
-# The redshift sample.
-# This is projected onto the deep-field
-# SOM to model the redshift distribution of each cell
-redshift:
-    data:
-        format: hdf5
-        band_name: mag_{}
-        bands: ugrizy
-        file: ./spectroscopic_data.hdf5
-        group: /
-        stream: false
-        load_errors: false
-        # extra columns to load, desired name: source name
-        extra:
-            redshift: redshift
-    dz: 0.02
-    zmax: 3.0
 
 
 output:
